--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -62,5 +62,29 @@
       padding: 15px;
       margin: 0 auto;
     }
+
+    .navbar-container{
+      position: relative;
+      height: 64px;
+      
+      .custom-navbar{
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: $primary_color;
+        justify-content: space-between;
+        display: flex;
+        align-items: center;
+        padding: 0 16px;
+
+        .nav-logo{
+          width: 40px;
+          height:40px;
+          border-radius: 100px;
+        }
+      }
+    }
   }
 }
