Add signout, change password and profile

--- a/app/views/layouts/admin/links/_user_link.html.erb
+++ b/app/views/layouts/admin/links/_user_link.html.erb
@@ -7,7 +7,7 @@
     aria-expanded='true'
     aria-controls='user'
   >
-  <i class="fas fa-user-alt mr-3 icon"></i>
+  <i class="fas fa-users mr-3 icon"></i>
     Users
   </a>
   <div
@@ -16,10 +16,10 @@
     aria-labelledby='headingOne'
     data-parent='#accordion'
   >
-  <a href="/users" class='d-block pl-2 pb-3'>
+  <a href="/user" class='d-block pl-2 pb-3'>
     All
   </a>
-  <a href="/users/new" class='d-block pl-2 pb-3'>
+  <a href="/user/new" class='d-block pl-2 pb-3'>
     New
   </a>
   </div>
