--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -30,11 +30,24 @@
         padding-left: 20px;
       }
 
+      .icon{
+        display: inline-block;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+      }
+
       a:hover{
         color: $primary_color_low !important;
       }
       div{
-        margin-top: 8px;
+        margin-top: 4px;
+        a{
+          margin-left: 20px;
+        }
       }
     }
 
