--- a/app/views/layouts/admin/sidebar/_sidebar.html.erb
+++ b/app/views/layouts/admin/sidebar/_sidebar.html.erb
@@ -5,5 +5,6 @@
   <div class='accordion mt-3' id='accordion'>
     <%= render 'layouts/admin/links/dashboard_link' %>
     <%= render 'layouts/admin/links/user_link' %>
+    <%= render 'layouts/admin/links/profile_link' %>
   </div>
 </div>
