--- a/app/views/layouts/admin/sidebar/_sidebar.html.erb
+++ b/app/views/layouts/admin/sidebar/_sidebar.html.erb
@@ -4,6 +4,8 @@
   </div>
   <div class='accordion mt-3' id='accordion'>
     <%= render 'layouts/admin/links/dashboard_link' %>
+    <%= render 'layouts/admin/links/announcements_link' %>
+    <%= render 'layouts/admin/links/message_link' %>
     <%= render 'layouts/admin/links/student_link' %>
     <%= render 'layouts/admin/links/user_link' %>
     <%= render 'layouts/admin/links/profile_link' %>
