--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -1,4 +1,5 @@
+
 <%= render 'components/containers/crud_form_container' do %>
-  <h1>New Student</h1>
-  <%= render 'form', student: @student %>
+  <h1>Edit Message</h1>
+  <%= render 'form', message: @message %>
 <% end %>
