--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -4,18 +4,17 @@
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
-    <%= f.input :student_id %>
-    <%= f.input :password_digest %>
+    <%= f.input :student_id, label: "Student ID" %>
     <%= f.input :first_name %>
     <%= f.input :middle_name %>
     <%= f.input :last_name %>
-    <%= f.input :gender %>
+    <%= f.input :gender, collection: Student::genders.keys, include_blank: false %>
     <%= f.input :date_of_birth %>
     <%= f.input :contact_number %>
     <%= f.input :address %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, class: 'btn btn-primary ' %>
   </div>
 <% end %>
