--- a/app/views/layouts/admin/navbar/_navbar.html.erb
+++ b/app/views/layouts/admin/navbar/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-container">
   <div class="custom-navbar">
     <div class="d-flex align-items-center">
-      <button class="btn btn-dark"><i class="fas fa-bars"></i></button>
+      <button class="btn btn-dark" id="nav-btn"><i class="fas fa-bars"></i></button>
       <h3 class="my-0 ml-3 text-white"><%= controller_name.titleize %></h3>
     </div>
     <div class="d-flex align-items-center">
@@ -12,3 +12,18 @@
     </div>
   </div>
 </div>
+
+<script>
+
+  const handleNavbarBtn = () => {
+    const navbarBtn = document.querySelector("#nav-btn")
+    navbarBtn.addEventListener("click", () => {
+      const sidebar = document.querySelector("#sidebar")
+      sidebar.classList.toggle("sidebar-hidden")
+    })
+  }
+
+  document.addEventListener("turbolinks:load", handleNavbarBtn);
+  
+
+</script>
