--- a/app/views/layouts/admin/sidebar/_sidebar.html.erb
+++ b/app/views/layouts/admin/sidebar/_sidebar.html.erb
@@ -6,6 +6,7 @@
     <%= render 'layouts/admin/links/dashboard_link' %>
     <%= render 'layouts/admin/links/announcements_link' %>
     <%= render 'layouts/admin/links/message_link' %>
+    <%= render 'layouts/admin/links/sos_link' %>
     <%= render 'layouts/admin/links/student_link' %>
     <%= render 'layouts/admin/links/user_link' %>
     <%= render 'layouts/admin/links/profile_link' %>
