--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -12,13 +12,10 @@
   </p>
 
   <p>
-    <strong>Message Type:</strong>
-    <%= @message.message_type || Message::message_types.keys.first %>
-  </p>
-
-  <p>
     <strong>Sent at:</strong>
-    <%= format_date @message.created_at %>
+    <%= format_date @message.created_at %> |
+    <%= format_time @message.created_at %> 
+    
   </p>
 
   <p>
